
              pgmhist: Add -machine option.

              pgmhist: Add -median, -quartile, and -decile options.

              pamtojpeg2k: default to no compression ratio constraint and
              allow compression ratios less than 1.  Because of compression
              metadata, small images do require loss of quality in order to
              get down to a compression ratio of 1.

              pnmcat: set don't care bits in packed PBM output to zero so
              they are predictable.

              libpam, pamcomp: fix bug: treats tuple type GRAYSCALE_ALPHA like
              GRAYSCALE on 32-bit machine.  Actually, looks only at first 4
              characters (8 characters on machine with 64 bit addressess) of
              the tuple type.  Broken since 10.56 (September 2011).

              pngtopam -alphapam with grayscale input: fix bug: generates
              invalid output: tuple type GRAYSCALE_ALPHA, but depth 1.  Depth
              should be 2.  Always broken (pngtopam was created in 
              Netpbm 10.44 (September 2008)).
              
              pamtotiff: fix bug: XRESOLUTION, YRESOLUTION, and RESOLUTIONUNIT
              not allowed in -tags.  Broken at least since 10.35.

              pnmpsnr: fix crash when invoked (invalidly) with only one
              argument.  Always broken.

              leaftoppm: fix incorrect determination of whether input is
              Interleaf on 64 bit systems.  Always broken.

              cmuwmtopbm: fix incorrect determination of whether input is
              a CMU window manager bitmap on 64 bit systems.  Always broken.

              pnmmontage: fix totally wrong output.  Broken in 10.44
              (August 2008).

              pnmmontage: fix random stuff placed in unoccupied space in the
              output image.  Always broken (program was new in 9.10 (January
              2001).

              pbmpscale, pgmhist, pampick, pamtompfont: fix wild pointer